--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">indoorway_countries</string>
     <string name="search">Search</string>
     <string name="unknown">Unknow</string>
+    <string name="country_details">Country details</string>
 </resources>
